# memoryfilesystem

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.c
CMake/: FindFUSE.cmake  FindFUSE3.cmake  FindPTHREAD.cmake
src/: access.c  bmap.c  chmod.c  chown.c  copy_file_range.c  fallocate.c  flock.c  flush.c  fs_metadata.c  fsync.c  fsyncdir.c  getattr.c  getxattr.c  ioctl.c  link.c  listxattr.c  lock.c  lseek.c  main.c  mkdir.c  mknod.c  open.c  opendir.c  poll.c  read.c  read_buf.c  readdir.c  readlink.c  release.c  releasedir.c  removexattr.c  rename.c  rmdir.c  setxattr.c  statfs.c  symlink.c  truncate.c  unlink.c  utimens.c  write.c  (+1 more)
src/btree/: btree.c
src/includes/: fs.h  fs_metada.h  operator.h  options.h
src/includes/btree/: btree.h
src/includes/linktable/: linktable.h
src/linktable/: linktable.c
